--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-CMakeFiles
+CMakeFiles/*
+bin/*
+CMakeCache.txt
+cmake_install.cmake
+test/CMakeFiles/*
+test/cmake_install.cmake
+test/googletest/*
+
+
+Makefile
+lib/CMakeFiles/
+lib/Makefile
+lib/libgmock.a
+lib/libgmock_main.a
+lib/libgtest.a
+lib/libgtest_main.a
+lib/libsimpleLibrary.a
+test/Makefile
